--- a/www/index.html
+++ b/www/index.html
@@ -13,7 +13,8 @@
   <link rel="icon" type="image/x-icon" href="assets/icon/favicon.ico">
   <link rel="manifest" href="manifest.json">
   <meta name="theme-color" content="#4e8ef7">
-
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAvQh7CI3_1DxnvzhNzdXSMLuPifQHcpPM&v=3.exp&libraries=places">
+    </script>
   <!-- add to homescreen for ios -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
